<resources>
    <string name="app_name">내 사람들</string>


    <string name="save">저장</string>
    <string name="edit">지인 정보</string>
    <string name="delete">지인 삭제</string>
    <string name="register">등록</string>
    <string name="register_end">"등록되었습니다"</string>
    <string name="friend_del">지인을 삭제 하시겠습니까?\n삭제시 등록하신 모든 메모은 삭제됩니다.</string>
    <string name="edit_pic">사진 변경</string>
    <string name="del_pic">사진 삭제</string>
    <string name="profile_pic">프로필 사진</string>


    <string name="modify">수정</string>
    <string name="modify_end">변경되었습니다.</string>
    <string name="commit">저장</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>

    <string name="permission_deny">내부 저장소 접근이 제한되어 있습니다.기능을 사용하기 위해 권한이 필요합니다. </string>
    <string name="select_friend">지인을 선택하세요.</string>
    <string name="write_puzzle_text">내용을 입력해주세요.</string>
    <string name="write_text">내용을 입력해주세요.</string>
    <string name="add_puzzle">퍼즐조각을 등록하였습니다.</string>
    <string name="set_notification">알림바 설정</string>
    <string name="set_notification_detail">알림바 설정을 키시면 편하게 퍼즐을 등록하실 수 있습니다.</string>
    <string name="pref_noti">notification</string>
    <string name="login">사용자 로그인</string>
    <string name="set_login_detail">구글 계정으로 로그인 하시면 데이터를 백업 하실 수 있습니다.</string>
    <string name="pref_login">login</string>
    <string name="pref_googleidkey">google_idkey</string>
    <string name="pref_googleidName">googleid_name</string>
    <string name="restore_failure">복구를 실패하였습니다.</string>
    <string name="internet_disconnection">인터넷이 연결되어 있지 않습니다. 인터넷 연결을 확인해주세요.</string>
    <string name="no_backup_data">마지막 백업날짜 : 없음</string>
    <string name="no_friend_data">무언가를 공감할 때, 사람과 사람과의 관계는 보다 깊어질 수 있다. </string>
    <string name="no_friend_data_detail">당신이 기록할 첫 지인을 추가해보세요!</string>
    <string name="no_friend_no_rank">지인을 먼저 추가해주세요.</string>
    <string name="no_friend_no_rank_detail">지인을 추가하시면 자동으로 갱신됩니다.</string>
    <string name="no_today_puzzle">오늘 등록된 퍼즐이 없습니다.</string>
    <string name="no_today_puzzle_detail">소중한 지인의 퍼즐을 등록해 보세요!</string>
    <string name="no_friend_direct_puzzle">퍼즐을 저정할 수 있는 지인이 없습니다.</string>
    <string name="no_friend_direct_puzzle_detail">버튼을 눌러 지인을 추가해보세요!</string>
    <string name="no_puzzle_detail">지인과의 소중한 기억들을 기록해보아요.</string>
    <string name="no_puzzle">아직 등록된 메모가 없네요!</string>
    <string name="restore">백업파일을 불러오시겠습니까?\n백업파일을 불러올 시 기존 데이터는 전부 삭제되며, 어플이 재시작됩니다.</string>
    <string name="set_calling">통화시 팝업설정</string>
    <string name="set_calling_detail">지인으로 등록 되어 있는 번호로 전화가 오거나 전화를 걸 때 작성한 퍼즐들을 보여줍니다.</string>
    <string name="pref_calling">calling</string>
    <string name="relation_is_empty"> - </string>
    <string name="name_empty">이름을 입력해주세요.</string>
    <string name="phone_number_is_empty">전화번호를 등록해주세요.</string>
    <string name="set_version">버전 정보</string>
    <string name="set_version_detail">1.00</string>
    <string name="no_puzzle_calling">표시할 퍼즐이 없습니다.</string>
    <string name="pref_calling_param_x">paramx</string>
    <string name="pref_calling_param_y">paramy</string>
    <string name="dialog_add_hint">내용을 입력해주세요.</string>
    <string name="msg_call_setup">해당 메모가 통화중에 보여집니다.</string>
    <string name="msg_call_unsetup">해당 메모가 통화중에 보이지 않습니다.</string>
    <string name="deleted_memo">삭제되었습니다.</string>
    <string name="msg_del">정말 삭제하시겠습니까? 한번 삭제된 메모는 복구할 수 없습니다.</string>
    <string name="get_from_phonebook">주소록에서 가져오기</string>
    <string name="set_license">사용한 오픈소스 라이센스</string>
    <string name="no_friend_data_writer">-오쇼 라즈니쉬</string>
    <string name="version">1.0</string>
    <string name="OSS_page">https://raw.githubusercontent.com/aronix/PuzzlePiece/master/OSS%20Notice.html</string>
    <string name="PIPP_page">https://raw.githubusercontent.com/aronix/PuzzlePiece/master/personal_information_processing_policy.html</string>
    <string name="oss_title">오픈소스 라이선스</string>
    <string name="personal_title">개인정보처리방침</string>

</resources>
