<?xml version="1.0" encoding="utf-8"?>




<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
        android:background="@color/white"
>
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">
        <ImageView
            android:src="@drawable/ic_settings"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"/>
        <TextView
            android:text="설정"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="4dp"/>
    </android.support.v7.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Grey300"/>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="90dp"
        android:background="@color/white">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingLeft="25dp">
        <TextView
            android:text="@string/login"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_login_detail_default"
            android:text="@string/set_login_detail"
            android:textSize="13dp"
            android:paddingTop="5dp"
            android:paddingLeft="3dp"
            android:textColor="@color/Grey500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"

        >
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sw_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/pb_login"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>


</LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Grey300"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingLeft="25dp">
            <TextView
                android:text="@string/set_notification"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/set_notification_detail"
                android:textSize="13dp"
                android:paddingTop="5dp"
                android:paddingLeft="3dp"
                android:textColor="@color/Grey500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            >
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sw_noti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Grey300"/>


</LinearLayout>
